--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,10 @@ set(SOURCE_FILES
     array.h
     array_test.c
     array_test.h
+    float.c
+    float.h
+    integer.c
+    integer.h
     interpreter.c
     interpreter.h
     memory.c
@@ -15,6 +19,12 @@ set(SOURCE_FILES
     memory_test.c
     memory_test.h
     minunit.c
-    minunit.h)
+    minunit.h
+    stdutil.c
+    stdutil.h
+    stdutil_test.c
+    stdutil_test.h
+    string.c
+    string.h)
 
-add_executable(worm ${SOURCE_FILES})
+add_executable(worm ${SOURCE_FILES} float.c)
